# mirror_mmetric

./: .clang-format  .gitignore  CHANGELOG.md  CHANGES.md  CMakeLists.txt  LICENCE.docx  LICENSE.md  Makefile  README.md  build-deps.sh  build-doc.sh  build.sh  clean.sh  meshTools.sln  mm.vcxproj  mm.vcxproj.filters  readme.sh  test.sh
dependencies/cmake/: clang-format.cmake  dmetric.cmake  glfw.cmake
dependencies/glad/include/glad/: glad.h
doc/: README.md  build-doc.sh
source/: main.cpp  mmAnalyse.cpp  mmAnalyse.h  mmColor.h  mmCommand.cpp  mmCommand.h  mmCompare.cpp  mmCompare.h  mmContext.h  mmDegrade.cpp  mmDegrade.h  mmDequantize.cpp  mmDequantize.h  mmGeometry.cpp  mmGeometry.h  mmIO.cpp  mmIO.h  mmImage.cpp  mmImage.h  mmModel.h  mmNormals.cpp  mmNormals.h  mmQuantize.cpp  mmQuantize.h  mmReindex.cpp  mmReindex.h  mmRender.cpp  mmRender.h  mmRendererHw.cpp  mmRendererHw.h  mmRendererSw.cpp  mmRendererSw.h  mmSample.cpp  mmSample.h  mmSequence.cpp  mmSequence.h  mmStatistics.h
source/cmd/: CMakeLists.txt
source/cmd/include/: mmCmdAnalyse.h  mmCmdCompare.h  mmCmdDegrade.h  mmCmdDequantize.h  mmCmdNormals.h  mmCmdPadding.h  mmCmdQuantize.h  mmCmdReindex.h  mmCmdRender.h  mmCmdSample.h  mmCmdSequence.h  mmCommand.h
source/cmd/source/: main.cpp  mmCmdAnalyse.cpp  mmCmdCompare.cpp  mmCmdDegrade.cpp  mmCmdDequantize.cpp  mmCmdNormals.cpp  mmCmdQuantize.cpp  mmCmdReindex.cpp  mmCmdRender.cpp  mmCmdSample.cpp  mmCmdSequence.cpp  mmCommand.cpp
source/lib/: CMakeLists.txt
source/lib/include/: mmColor.h  mmCompare.h  mmContext.h  mmDequantize.h  mmGeometry.h  mmIO.h  mmImage.h  mmMetadata.h  mmModel.h  mmQuantize.h  mmRendererHw.h  mmRendererSw.h  mmSample.h  mmStatistics.h  mmVersion.h
source/lib/source/: mmCompare.cpp  mmDequantize.cpp  mmGeometry.cpp  mmIO.cpp  mmImage.cpp  mmModel.cpp  mmQuantize.cpp  mmRendererHw.cpp  mmRendererSw.cpp  mmSample.cpp
test/: .gitignore  config.sh  pull-extdata.sh  test-all.sh  test-analyse.sh  test-compare-eq.sh  test-compare-ibsm.sh  test-compare-pcc.sh  test-compare-pcqm.sh  test-compare-topo.sh  test-composed.sh  test-degrade.sh  test-help.sh  test-normals.sh  test-quantize.sh  test-reindex.sh  test-render.sh  test-sample-ediv.sh  test-sample-face.sh  test-sample-grid.sh  test-sample-map.sh  test-sample-prnd.sh  test-sample-sdiv.sh
test/data/: basketball_player_00000001.mtl  basketball_player_00000002.mtl  basketball_player_00000003.mtl  basketball_player_fr0001_tfan_topo_face_order.txt  basketball_player_fr0001_tfan_topo_vert_order.txt  basketball_player_statistics_all.txt  cpv_basketball_player_00000001.ply  plane.mtl  plane_reorder_topo_vert.txt  pyramid.ply
test/meshlab/: normals_basketball.mlp  reindex_basketball.mlp  sampling_basketball.mlp  sampling_plane_irregular.mlp
test/refs/: dequantize_plane_qp16_other_defaults.txt  dequantize_plane_qp16_qt0_qn0_qc0.txt  dequantize_plane_qp16_qt16_qn16_qc16.txt  dequantize_plane_qp8_other_defaults.txt  dequantize_plane_qp8_qt0_qn0_qc0.txt  dequantize_plane_qp8_qt8_qn8_qc8.txt  helpBadCmd.txt  helpBadCmd_linux.txt  helpCompare.txt  helpCompare_linux.txt  helpDeQuantize.txt  helpDeQuantize_linux.txt  helpDegrade.txt  helpDegrade_linux.txt  helpMain.txt  helpMain_linux.txt  helpQuantize.txt  helpQuantize_linux.txt  helpReindex.txt  helpReindex_linux.txt  helpRender.txt  helpRender_linux.txt  helpSample.txt  helpSample_linux.txt  helpSequence.txt  helpSequence_linux.txt  helpSort.txt  quantize_plane_qp16.txt  quantize_plane_qp16_other_defaults.txt  quantize_plane_qp16_other_defaults_vars.txt  quantize_plane_qp16_qt0_qn0_qc0.txt  quantize_plane_qp16_qt0_qn0_qc0_vars.txt  quantize_plane_qp16_qt16_qn16_qc16.txt  quantize_plane_qp8.txt  quantize_plane_qp8_other_defaults.txt  quantize_plane_qp8_other_defaults_vars.txt  quantize_plane_qp8_qt0_qn0_qc0.txt  quantize_plane_qp8_qt0_qn0_qc0_vars.txt  quantize_plane_qp8_qt8_qn8_qc8.txt  quantize_plane_qp8_qt8_qn8_qc8_vars.txt  (+63 more)
